DAY3-YAMLs/Ingress/1.app1-Pod1.yml
apiVersion: v1
kind: Pod 
metadata:
  name: app1-pod
  labels:  
    type: webserver 
spec:
  containers:
    - name: c1
      image: nginx
