DAY3-YAMLs/Ingress/2.app2-pod.yml
apiVersion: v1
kind: Pod 
metadata:
  name: app2-pod
  labels:  
    type: app2
spec:
  containers:
    - name: c1
      image: nginx
