DAY3-YAMLs/Ingress/3.app1-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: app1-service1
spec:
  type: ClusterIP
  ports:
   - targetPort: 80  # container port
     port: 80    # service port
  selector:   
    type: webserver
