DAY3-YAMLs/Ingress/4.app2-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: app2-service2
spec:
  type: ClusterIP
  ports:
   - targetPort: 80  # container port
     port: 80    # service port
  selector:   
    type: app2
